--- a/大数据分析计算机基础/homework/final/analyze.ipynb
+++ b/大数据分析计算机基础/homework/final/analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,328 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ENTRY_DATA tts_sysno\n",
-      "OFFICE_CODES tts_sysno\n",
-      "BIOG_INST_DATA c_personid\n",
-      "POSSESSION_DATA c_personid\n",
-      "STATUS_DATA tts_sysno\n",
-      "EVENTS_DATA c_personid\n",
-      "ALTNAME_DATA tts_sysno\n",
-      "POSTED_TO_ADDR_DATA tts_sysno\n",
-      "TEXT_INSTANCE_DATA tts_sysno\n",
-      "ASSOC_DATA tts_sysno\n",
-      "BIOG_ADDR_DATA tts_sysno\n",
-      "TEXT_CODES tts_sysno\n",
-      "POSTING_DATA c_personid\n",
-      "KIN_DATA tts_sysno\n",
-      "BIOG_TEXT_DATA tts_sysno\n",
-      "POSTED_TO_OFFICE_DATA tts_sysno\n",
-      "TMP_INDEX_YEAR c_personid\n",
-      "EVENTS_ADDR c_event_record_id\n",
-      "POSSESSION_ADDR c_possession_record_id\n",
-      "BIOG_MAIN tts_sysno\n",
-      "BIOG_SOURCE_DATA c_personid\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'c_addr_id',\n",
-       " 'c_addr_type',\n",
-       " 'c_age',\n",
-       " 'c_alt_name',\n",
-       " 'c_alt_name_chn',\n",
-       " 'c_alt_name_type_code',\n",
-       " 'c_appt_type_code',\n",
-       " 'c_assoc_claimer_id',\n",
-       " 'c_assoc_code',\n",
-       " 'c_assoc_count',\n",
-       " 'c_assoc_day',\n",
-       " 'c_assoc_day_gz',\n",
-       " 'c_assoc_id',\n",
-       " 'c_assoc_intercalary',\n",
-       " 'c_assoc_kin_code',\n",
-       " 'c_assoc_kin_id',\n",
-       " 'c_assoc_month',\n",
-       " 'c_assoc_nh_code',\n",
-       " 'c_assoc_nh_year',\n",
-       " 'c_assoc_range',\n",
-       " 'c_assoc_year',\n",
-       " 'c_assume_office_code',\n",
-       " 'c_attempt_count',\n",
-       " 'c_autogen_notes',\n",
-       " 'c_bi_begin_year',\n",
-       " 'c_bi_by_nh_code',\n",
-       " 'c_bi_by_nh_year',\n",
-       " 'c_bi_by_range',\n",
-       " 'c_bi_end_year',\n",
-       " 'c_bi_ey_nh_code',\n",
-       " 'c_bi_ey_nh_year',\n",
-       " 'c_bi_ey_range',\n",
-       " 'c_bi_role_code',\n",
-       " 'c_bibl_cat_code',\n",
-       " 'c_birthyear',\n",
-       " 'c_by_day',\n",
-       " 'c_by_day_gz',\n",
-       " 'c_by_intercalary',\n",
-       " 'c_by_month',\n",
-       " 'c_by_nh_code',\n",
-       " 'c_by_nh_year',\n",
-       " 'c_by_range',\n",
-       " 'c_category_1',\n",
-       " 'c_category_2',\n",
-       " 'c_category_3',\n",
-       " 'c_category_4',\n",
-       " 'c_choronym_code',\n",
-       " 'c_counter',\n",
-       " 'c_created_by',\n",
-       " 'c_created_date',\n",
-       " 'c_day',\n",
-       " 'c_day_ganzhi',\n",
-       " 'c_death_age',\n",
-       " 'c_death_age_range',\n",
-       " 'c_deathyear',\n",
-       " 'c_delete',\n",
-       " 'c_dy',\n",
-       " 'c_dy_day',\n",
-       " 'c_dy_day_gz',\n",
-       " 'c_dy_intercalary',\n",
-       " 'c_dy_month',\n",
-       " 'c_dy_nh_code',\n",
-       " 'c_dy_nh_year',\n",
-       " 'c_dy_range',\n",
-       " 'c_entry_addr_id',\n",
-       " 'c_entry_code',\n",
-       " 'c_entry_nh_year',\n",
-       " 'c_entry_range',\n",
-       " 'c_ethnicity_code',\n",
-       " 'c_event',\n",
-       " 'c_event_code',\n",
-       " 'c_event_record_id',\n",
-       " 'c_exam_field',\n",
-       " 'c_exam_rank',\n",
-       " 'c_extant',\n",
-       " 'c_female',\n",
-       " 'c_firstyear',\n",
-       " 'c_fl_earliest_year',\n",
-       " 'c_fl_ey_nh_code',\n",
-       " 'c_fl_ey_nh_year',\n",
-       " 'c_fl_ey_notes',\n",
-       " 'c_fl_latest_year',\n",
-       " 'c_fl_ly_nh_code',\n",
-       " 'c_fl_ly_nh_year',\n",
-       " 'c_fl_ly_notes',\n",
-       " 'c_fy_day',\n",
-       " 'c_fy_day_gz',\n",
-       " 'c_fy_intercalary',\n",
-       " 'c_fy_month',\n",
-       " 'c_fy_nh_code',\n",
-       " 'c_fy_nh_year',\n",
-       " 'c_fy_range',\n",
-       " 'c_household_status_code',\n",
-       " 'c_index_addr_id',\n",
-       " 'c_index_addr_type_code',\n",
-       " 'c_index_year',\n",
-       " 'c_index_year_source_id',\n",
-       " 'c_index_year_type_code',\n",
-       " 'c_inst_code',\n",
-       " 'c_inst_name_code',\n",
-       " 'c_instance_title',\n",
-       " 'c_instance_title_chn',\n",
-       " 'c_instance_title_trans',\n",
-       " 'c_intercalary',\n",
-       " 'c_kin_code',\n",
-       " 'c_kin_id',\n",
-       " 'c_lastyear',\n",
-       " 'c_litgenre_code',\n",
-       " 'c_ly_day',\n",
-       " 'c_ly_day_gz',\n",
-       " 'c_ly_intercalary',\n",
-       " 'c_ly_month',\n",
-       " 'c_ly_nh_code',\n",
-       " 'c_ly_nh_year',\n",
-       " 'c_ly_range',\n",
-       " 'c_main_source',\n",
-       " 'c_measure_code',\n",
-       " 'c_mingzi',\n",
-       " 'c_mingzi_chn',\n",
-       " 'c_mingzi_proper',\n",
-       " 'c_mingzi_rm',\n",
-       " 'c_modified_by',\n",
-       " 'c_modified_date',\n",
-       " 'c_month',\n",
-       " 'c_name',\n",
-       " 'c_name_chn',\n",
-       " 'c_name_proper',\n",
-       " 'c_name_rm',\n",
-       " 'c_natal',\n",
-       " 'c_nh_code',\n",
-       " 'c_nh_year',\n",
-       " 'c_nianhao_id',\n",
-       " 'c_notes',\n",
-       " 'c_number',\n",
-       " 'c_occasion_code',\n",
-       " 'c_office_category_id',\n",
-       " 'c_office_chn',\n",
-       " 'c_office_chn_alt',\n",
-       " 'c_office_id',\n",
-       " 'c_office_id_backup',\n",
-       " 'c_office_id_old',\n",
-       " 'c_office_pinyin',\n",
-       " 'c_office_pinyin_alt',\n",
-       " 'c_office_trans',\n",
-       " 'c_office_trans_alt',\n",
-       " 'c_pages',\n",
-       " 'c_parental_status',\n",
-       " 'c_part_of_instance',\n",
-       " 'c_part_of_instance_notes',\n",
-       " 'c_period',\n",
-       " 'c_personid',\n",
-       " 'c_possession_act_code',\n",
-       " 'c_possession_desc',\n",
-       " 'c_possession_desc_chn',\n",
-       " 'c_possession_nh_code',\n",
-       " 'c_possession_nh_yr',\n",
-       " 'c_possession_record_id',\n",
-       " 'c_possession_yr',\n",
-       " 'c_possession_yr_range',\n",
-       " 'c_posting_id',\n",
-       " 'c_posting_id_old',\n",
-       " 'c_posting_notes',\n",
-       " 'c_print',\n",
-       " 'c_pub_country',\n",
-       " 'c_pub_dy',\n",
-       " 'c_pub_loc',\n",
-       " 'c_pub_nh_code',\n",
-       " 'c_pub_nh_year',\n",
-       " 'c_pub_notes',\n",
-       " 'c_pub_range_code',\n",
-       " 'c_pub_year',\n",
-       " 'c_publisher',\n",
-       " 'c_quantity',\n",
-       " 'c_range_code',\n",
-       " 'c_role',\n",
-       " 'c_role_id',\n",
-       " 'c_secondary_source_author',\n",
-       " 'c_self_bio',\n",
-       " 'c_sequence',\n",
-       " 'c_source',\n",
-       " 'c_status_code',\n",
-       " 'c_suffix_version',\n",
-       " 'c_supplement',\n",
-       " 'c_surname',\n",
-       " 'c_surname_chn',\n",
-       " 'c_surname_proper',\n",
-       " 'c_surname_rm',\n",
-       " 'c_tertiary_personid',\n",
-       " 'c_tertiary_type_notes',\n",
-       " 'c_text_country',\n",
-       " 'c_text_dy',\n",
-       " 'c_text_edition_id',\n",
-       " 'c_text_instance_id',\n",
-       " 'c_text_nh_code',\n",
-       " 'c_text_nh_year',\n",
-       " 'c_text_range_code',\n",
-       " 'c_text_title',\n",
-       " 'c_text_type_id',\n",
-       " 'c_text_year',\n",
-       " 'c_textid',\n",
-       " 'c_title',\n",
-       " 'c_title_alt_chn',\n",
-       " 'c_title_chn',\n",
-       " 'c_title_trans',\n",
-       " 'c_topic_code',\n",
-       " 'c_tribe',\n",
-       " 'c_url_api',\n",
-       " 'c_url_api_coda',\n",
-       " 'c_url_homepage',\n",
-       " 'c_year',\n",
-       " 'c_yr_range',\n",
-       " 'tts_sysno'}"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing shutdown due to inactivity...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-12 19:23:04,318 - INFO     - Executing shutdown due to inactivity...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing shutdown...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-12 19:23:04,581 - INFO     - Executing shutdown...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exception on /shutdown [GET]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 2077, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 1525, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 1523, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 1509, in dispatch_request\n",
-      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**req.view_args)\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/dtale/app.py\", line 435, in shutdown\n",
-      "    shutdown_server()\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/dtale/app.py\", line 421, in shutdown_server\n",
-      "    raise RuntimeError(\"Not running with the Werkzeug Server\")\n",
-      "RuntimeError: Not running with the Werkzeug Server\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-12 19:23:04,589 - ERROR    - Exception on /shutdown [GET]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 2077, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 1525, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 1523, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 1509, in dispatch_request\n",
-      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**req.view_args)\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/dtale/app.py\", line 435, in shutdown\n",
-      "    shutdown_server()\n",
-      "  File \"/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/dtale/app.py\", line 421, in shutdown_server\n",
-      "    raise RuntimeError(\"Not running with the Werkzeug Server\")\n",
-      "RuntimeError: Not running with the Werkzeug Server\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "person_keys = set()\n",
     "for i in table_keys:\n",
@@ -447,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -478,6 +159,7 @@
        "      <th>coded</th>\n",
        "      <th>code_table</th>\n",
        "      <th>note</th>\n",
+       "      <th>affiliated_table</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -490,6 +172,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -500,6 +183,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -510,6 +194,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -520,6 +205,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -530,9 +216,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -550,6 +238,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>TEXT_TYPE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>455</th>\n",
@@ -560,6 +249,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>YEAR_RANGE_CODES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>456</th>\n",
@@ -570,6 +260,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>YEAR_RANGE_CODES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>457</th>\n",
@@ -580,6 +271,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>YEAR_RANGE_CODES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>458</th>\n",
@@ -590,10 +282,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>YEAR_RANGE_CODES</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>459 rows × 7 columns</p>\n",
+       "<p>459 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -623,23 +316,23 @@
        "457             relative degree of exactness of a date        NaN   NaN   \n",
        "458  relative degree of exactness of a date in Chinese        NaN   NaN   \n",
        "\n",
-       "    code_table note  \n",
-       "0          NaN  NaN  \n",
-       "1          NaN  NaN  \n",
-       "2          NaN  NaN  \n",
-       "3          NaN  NaN  \n",
-       "4          NaN  NaN  \n",
-       "..         ...  ...  \n",
-       "454        NaN  NaN  \n",
-       "455        NaN  NaN  \n",
-       "456        NaN  NaN  \n",
-       "457        NaN  NaN  \n",
-       "458        NaN  NaN  \n",
+       "    code_table note  affiliated_table  \n",
+       "0          NaN  NaN         ADDRESSES  \n",
+       "1          NaN  NaN         ADDRESSES  \n",
+       "2          NaN  NaN         ADDRESSES  \n",
+       "3          NaN  NaN         ADDRESSES  \n",
+       "4          NaN  NaN         ADDRESSES  \n",
+       "..         ...  ...               ...  \n",
+       "454        NaN  NaN         TEXT_TYPE  \n",
+       "455        NaN  NaN  YEAR_RANGE_CODES  \n",
+       "456        NaN  NaN  YEAR_RANGE_CODES  \n",
+       "457        NaN  NaN  YEAR_RANGE_CODES  \n",
+       "458        NaN  NaN  YEAR_RANGE_CODES  \n",
        "\n",
-       "[459 rows x 7 columns]"
+       "[459 rows x 8 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,11 +344,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.DataFrame({'字段': [k for k in person_keys if k in meaning['column_code'].values], '中文意思': [meaning['meaning_cn'].values[meaning['column_code']==k][0] for k in person_keys if k in meaning['column_code'].values]})\n",
+    "df1 = pd.DataFrame({\n",
+    "    '字段': [k for k in person_keys if k in meaning['column_code'].values], \n",
+    "    '中文意思': [meaning['meaning_cn'].values[meaning['column_code']==k][0] for k in person_keys if k in meaning['column_code'].values],\n",
+    "    '隶属表格': [meaning['affiliated_table'].values[meaning['column_code']==k][0] for k in person_keys if k in meaning['column_code'].values]\n",
+    "})\n",
     "with open('./人物维度.csv', 'w', encoding='utf-8') as f:\n",
     "    df1.to_csv(f, index=False, header=True)"
    ]
