--- a/大数据分析计算机基础/homework/final/codeboook.ipynb
+++ b/大数据分析计算机基础/homework/final/codeboook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -21,27 +21,19 @@
       "/Users/DaweiFu/opt/anaconda3/lib/python3.9/site-packages/openpyxl/styles/stylesheet.py:226: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
       "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['TABLE_LIST', 'ADDRESSES', 'ADDR_BELONGS_DATA', 'ADDR_CODES', 'ADDR_PLACE_DATA', 'ADDR_XY', 'ALTNAME_CODES', 'ALTNAME_DATA', 'APPOINTMENT_TYPE_CODES', 'ASSOC_CODES', 'ASSOC_CODE_TYPE_REL', 'ASSOC_DATA', 'ASSOC_TYPES', 'ASSUME_OFFICE_CODES', 'BIOG_ADDR_CODES', 'BIOG_ADDR_DATA', 'BIOG_INST_CODES', 'BIOG_INST_DATA', 'BIOG_MAIN', 'BIOG_SOURCE_DATA', 'CHORONYM_CODES', 'COPYMISSINGTABLES', 'COPYTABLES', 'COPYTABLESDEFAULT', 'COUNTRY_CODES', 'DATABASE_LINK_CODES', 'DATABASE_LINK_DATA', 'DYNASTIES', 'ENTRY_CODES', 'ENTRY_CODE_TYPE_REL', 'ENTRY_DATA', 'ENTRY_TYPES', 'ETHNICITY_TRIBE_CODES', 'EVENTS_ADDR', 'EVENTS_DATA', 'EVENT_CODES', 'EXTANT_CODES', 'FIX_AUTHORS', 'FOREIGNKEYS', 'FORMLABELS', 'GANZHI_CODES', 'HOUSEHOLD_STATUS_CODES', 'KINSHIP_CODES', 'KIN_DATA', 'KIN_MOURNING', 'KIN_MOURNING_STEPS', 'LITERARYGENRE_CODES', 'MEASURE_CODES', 'NIAN_HAO', 'OCCASION_CODES', 'OFFICE_CATEGORIES', 'OFFICE_CODES', 'OFFICE_CODES_CONVERSION', 'OFFICE_CODE_TYPE_REL', 'OFFICE_TYPE_TREE', 'OFFICE_TYPE_TREE_BACKUP', 'PARENTAL_STATUS_CODES', 'PLACE_CODES', 'POSSESSION_ACT_CODES', 'POSSESSION_ADDR', 'POSSESSION_DATA', 'POSTED_TO_ADDR_DATA', 'POSTED_TO_OFFICE_DATA', 'POSTING_DATA', 'SOCIAL_INSTITUTION_ADDR_TYPES', 'SCHOLARLYTOPIC_CODES', 'SOCIAL_INSTITUTION_ADDR', 'SOCIAL_INSTITUTION_ALTNAME_CODE', 'SOCIAL_INSTITUTION_ALTNAME_DATA', 'SOCIAL_INSTITUTION_CODES', 'SOCIAL_INSTITUTION_CODES_CONVER', 'SOCIAL_INSTITUTION_NAME_CODES', 'SOCIAL_INSTITUTION_TYPES', 'STATUS_CODES', 'STATUS_CODE_TYPE_REL', 'STATUS_DATA', 'STATUS_TYPES', 'TEXT_BIBLCAT_CODES', 'TEXT_BIBLCAT_CODE_TYPE_REL', 'TEXT_BIBLCAT_TYPES', 'TEXT_BIBLCAT_TYPES_1', 'TEXT_CODES', 'TEXT_DATA', 'TEXT_INSTANCE_DATA', 'TEXT_ROLE_CODES', 'TEXT_TYPE', 'YEAR_RANGE_CODES'])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "xl_file = pd.ExcelFile('./cbdb_codebook.xlsx')\n",
     "dfs = {sheet_name: xl_file.parse(sheet_name) for sheet_name in xl_file.sheet_names}\n",
-    "dfs.keys()"
+    "for t in dfs:\n",
+    "    if t!='TABLE_LIST':\n",
+    "        dfs[t].loc[:, 'affiliated_table'] = t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +176,7 @@
        "[86 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -249,6 +241,7 @@
        "      <th>coded</th>\n",
        "      <th>code_table</th>\n",
        "      <th>note</th>\n",
+       "      <th>affiliated_table</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -261,6 +254,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -271,6 +265,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -281,6 +276,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -291,6 +287,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -301,6 +298,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -311,6 +309,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -321,6 +320,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -331,6 +331,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -341,6 +342,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -351,6 +353,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -361,6 +364,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -371,6 +375,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -381,6 +386,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -391,6 +397,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -401,6 +408,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -411,6 +419,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -421,6 +430,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -431,6 +441,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -441,6 +452,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>ADDRESSES</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -468,29 +480,29 @@
        "17    belongs5_ID   第五层从属行政区ID     upper fifth-level administrative unit ID   \n",
        "18  belongs5_Name   第五层从属行政区名称   upper fifth-level administrative unit name   \n",
        "\n",
-       "    data_type  coded  code_table  note  \n",
-       "0         NaN    NaN         NaN   NaN  \n",
-       "1         NaN    NaN         NaN   NaN  \n",
-       "2         NaN    NaN         NaN   NaN  \n",
-       "3         NaN    NaN         NaN   NaN  \n",
-       "4         NaN    NaN         NaN   NaN  \n",
-       "5         NaN    NaN         NaN   NaN  \n",
-       "6         NaN    NaN         NaN   NaN  \n",
-       "7         NaN    NaN         NaN   NaN  \n",
-       "8         NaN    NaN         NaN   NaN  \n",
-       "9         NaN    NaN         NaN   NaN  \n",
-       "10        NaN    NaN         NaN   NaN  \n",
-       "11        NaN    NaN         NaN   NaN  \n",
-       "12        NaN    NaN         NaN   NaN  \n",
-       "13        NaN    NaN         NaN   NaN  \n",
-       "14        NaN    NaN         NaN   NaN  \n",
-       "15        NaN    NaN         NaN   NaN  \n",
-       "16        NaN    NaN         NaN   NaN  \n",
-       "17        NaN    NaN         NaN   NaN  \n",
-       "18        NaN    NaN         NaN   NaN  "
+       "    data_type  coded  code_table  note affiliated_table  \n",
+       "0         NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "1         NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "2         NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "3         NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "4         NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "5         NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "6         NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "7         NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "8         NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "9         NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "10        NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "11        NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "12        NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "13        NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "14        NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "15        NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "16        NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "17        NaN    NaN         NaN   NaN        ADDRESSES  \n",
+       "18        NaN    NaN         NaN   NaN        ADDRESSES  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
